fixed floater/links overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,7 @@ html, body {
     width: 100%;
     height: 100%;
     top: 0%;
-    z-index: -1;
+    z-index: 0;
 }
 
 /*******************************/
@@ -43,13 +43,15 @@ html, body {
     opacity: 0.75;
     font-size: 110px;
     text-align: center;
-    position: relative;
+    /* position: relative; */
+    position: block;
+    margin: 10% 0 0 0;
     animation: float 5s ease-in-out infinite;    
 }
 
 .name {
-    margin-top: 10%;
-    margin-bottom: 20px;
+    /* padding-bottom: 10px; */
+    margin: 0 auto;
 }
 
 
@@ -67,6 +69,11 @@ html, body {
 
 /*.grow { transition: all .2s ease-in-out; }*/
 .grow:hover { transform: scale(1.1);}
+
+.links {
+    position: block;
+    margin: 0 auto;
+}
 
 .links i {
     color: #8e8d8b;
